2007-07-02  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/editor/DefaultPlotEditor.java
	(updatePlotProperties): Updated for changes to LineAndShapeRenderer,
	* source/org/jfree/chart/renderer/category/LineAndShapeRenderer.java
	(linesVisible): Removed,
	(shapesVisible): Likewise,
	(shapesFilled): Likewise,
	(LineAndShapeRenderer(boolean, boolean)): Likewise,
	(getItemLineVisible): Adjust lookup for removed field,
	(getLinesVisible): Removed,
	(setLinesVisible): Likewise,
	(getItemShapeVisible): Adjust lookup for removed field,
	(getShapesVisible): Removed,
	(setShapesVisible): Likewise,
	(getItemShapeFilled): Adjust lookup for removed field,
	(setShapesFilled): Removed,
	(equals): Updated for removed fields.
	
2007-07-02  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/XYLineAndShapeRenderer.java
	(linesVisible): Removed,
	(shapesVisible): Likewise,
	(shapesFilled): Likewise,
	(XYLineAndShapeRenderer(boolean, boolean)): Likewise,
	(getItemLineVisible): Adjust lookup for removed field,
	(getLinesVisible): Removed,
	(setLinesVisible): Likewise,
	(getItemShapeVisible): Adjust lookup for removed field,
	(getShapesVisible): Removed,
	(setShapesVisible): Likewise,
	(getItemShapeFilled): Adjust lookup for removed field,
	(setShapesFilled): Removed,
	(equals): Updated for removed fields,
	* source/org/jfree/chart/renderer/xy/XYStepRenderer.java
	(XYStepRenderer): Updated for removed methods in superclass,
	* tests/org/jfree/chart/renderer/xy/junit/XYLineAndShapeRendererTests.java
	(testEquals): Updated for removed methods.

2007-07-02  David Gilbert  <david.gilbert@object-refinery.com>

	* experimental/org/jfree/experimental/chart/axis/LogAxis.java
	(draw): Updated for change in method signature,
	* source/org/jfree/chart/axis/Axis.java
	(labelToolTip): New field,
	(labelURL): Likewise,
	(Axis(String)): Initialise new fields,
	(getLabelToolTip): New method,
	(setLabelToolTip): Likewise,